FISH-8652: Downgrade map and array construction in KubernetesApiEndpointSlicesProviderTest